--- a/src/index.css
+++ b/src/index.css
@@ -33,10 +33,6 @@ body {
   background: #f8f8fa;
 }
 
-#root {
-  /* max-width: 42rem; */
-}
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
